agregar boton que cambia de color el fondo

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 </head>
 <body>
     <div class="back">
-        <h1>Wilder Duarte</h1>
-        <h1>Wilder Duarte</h1>
+        <h1>gerlier</h1>
+        <h1>gerlier</h1>
+        <button onclick="cambiarcolor()">Cambiar Color</button>
     </div>
     <script>
         function cambiarcolor(){
-            document.body.style.backgroundcolor = "blue"
+            document.body.style.backgroundColor = "black"
         }
     </script>
 </body>
